k8s-config/kustomize/overlays/keel-dev/skaha/skaha-tomcat-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: skaha-tomcat
spec:
  template:
    spec:
      containers:
        name: skaha-tomcat
      - env:
        - name: skaha.hostname
          value: rc-uv.canfar.net
        - name: skaha.harborhosts
          value: "harbor.canfar.net harbor-dev.canfar.net"
        - name: skaha.usersgroup
          value: "ivo://cadc.nrc.ca/gms-proto?skaha-users"
        - name: skaha.adminsgroup
          value: "ivo://cadc.nrc.ca/gms-proto?skaha-admins"
        image: canfar-registry.cloud.computecanada.ca/skaha-tomcat:0.2
      serviceAccountName: skaha
      volumes:
      - name: cavern-volume
        cephfs:
          monitors:
          - 10.30.201.3:6789
          - 10.30.202.3:6789
          - 10.30.203.3:6789
          path: /volumes/_nogroup/dcd994bc-c0d4-4557-9fbf-28fc4ef5969e
          user: kanfarnetes_dev
          secretRef:
            name: cephfs-cephx-key
          readOnly: false
