k8s-config/kustomize/overlays/keel-dev/skaha/skaha-wsproxy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: skaha-wsproxy
spec:
  template:
    spec:
      containers:
          name: skaha-wsproxy
        - image: canfar-registry.cloud.computecanada.ca/skaha-wsproxy:0.2
