k8s-config/kustomize/overlays/keel-dev/skaha/notebook-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: notebook-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /notebook/$2
    nginx.ingress.kubernetes.io/proxy-body-size: 100g
spec:
  rules:
  - host: rc-uv.canfar.net
    http:
      paths:
      - path: /notebook(/|$)(.*)
        backend:
          serviceName: skaha-wsproxy-svc
          servicePort: 8080
