k8s-config/kustomize/overlays/keel-dev/skaha/skaha-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: skaha-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /skaha/$2
    nginx.ingress.kubernetes.io/proxy-body-size: 100g
spec:
  rules:
  - host: rc-uv.canfar.net
    http:
      paths:
      - path: /skaha(/|$)(.*)
        backend:
          serviceName: skaha-tomcat-svc
          servicePort: 8080
